linked library object loses particle settings #45658

Closed
opened 2015-08-03 00:35:37 +02:00 by jim ww smith · 20 comments

System Information
Operating system and graphics card
OSX 10.10.4 - NVIDIA GeForce GTX 680 2048 MB

Blender Version
Broken: ( 2.75a c27589e )
Worked: ( 2.74 )

Short description of error
when opening a file with a 'local' linked library object, particle settings are lost. error message pops up identifying missing library settings.

Exact steps for others to reproduce the error
create object(character) with particle settings, save file.

create new file, link scene file with object(character), link object(character) to local scene. make linked library object 'local' in object properties. save file. close file.

re-open scene file with linked object(character). warning that particle settings are missing. linked library object(character) has no particle settings.

this is going to cause serious problems. i have a character with multiple particle systems, who will appear in multiple scenes. re-importing the character mesh every time i open a file defeats the purpose of linked libraries. character needs to be local to apply armature actions within local scene file. i have tested that this process works with previous versions ( 2.74 )

**System Information** Operating system and graphics card OSX 10.10.4 - NVIDIA GeForce GTX 680 2048 MB **Blender Version** Broken: ( 2.75a c27589e ) Worked: ( 2.74 ) **Short description of error** when opening a file with a 'local' linked library object, particle settings are lost. error message pops up identifying missing library settings. **Exact steps for others to reproduce the error** create object(character) with particle settings, save file. create new file, link scene file with object(character), link object(character) to local scene. make linked library object 'local' in object properties. save file. close file. re-open scene file with linked object(character). warning that particle settings are missing. linked library object(character) has no particle settings. this is going to cause serious problems. i have a character with multiple particle systems, who will appear in multiple scenes. re-importing the character mesh every time i open a file defeats the purpose of linked libraries. character needs to be local to apply armature actions within local scene file. i have tested that this process works with previous versions ( 2.74 )
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JimwwSmith

Added subscriber: @JimwwSmith

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I cannot reproduce this here.
Did you test it in the latest buildbot build(Download Latest Builds )?
version 2.75 (sub 3), branch b'master', commit date b'2015-08-01' b'02:37', hash b'49f8832', b'Release'

I cannot reproduce this here. Did you test it in the latest buildbot build([Download Latest Builds ](https://builder.blender.org/download/))? version 2.75 (sub 3), branch b'master', commit date b'2015-08-01' b'02:37', hash b'49f8832', b'Release'
Author

tried latest build, still getting the same result. i did not see any other reports of this issue, so i saw no reason to assume it had been fixed. it does work under 2.74, but i am concerned about regression issues in re-saving new files with old versions.

tried latest build, still getting the same result. i did not see any other reports of this issue, so i saw no reason to assume it had been fixed. it does work under 2.74, but i am concerned about regression issues in re-saving new files with old versions.

The method that I confirmed may be wrong.
original.blend is an original file.
MakeLocal.blend is the result that tried this.

It is the procedure that I confirmed.
1.Run Blender.
2.Link the scene named OriginalScene from original.blend.
3.Choose local scene.
4.Link an object named originalCube from original.blend.
5.Carry out Make Local(All) in originalCube which linked to local Scene.
6.Save this in blend file, and load it again.
original.blend
MakeLocal.blend

The method that I confirmed may be wrong. original.blend is an original file. MakeLocal.blend is the result that tried this. It is the procedure that I confirmed. 1.Run Blender. 2.Link the scene named OriginalScene from original.blend. 3.Choose local scene. 4.Link an object named originalCube from original.blend. 5.Carry out Make Local(All) in originalCube which linked to local Scene. 6.Save this in blend file, and load it again. [original.blend](https://archive.blender.org/developer/F217904/original.blend) [MakeLocal.blend](https://archive.blender.org/developer/F217906/MakeLocal.blend)
Author

that description appears to be correct. i think the language of linked libraries is causing some confusion, so i will describe the use scenario. i have created a character in a file, with particle settings for multiple hair systems. i then create another file for an environment, and import the character as a linked scene file. from that scene file, i link the character to the environment scene. when i reload the environment file, the particle settings on the linked character object are lost.

that description appears to be correct. i think the language of linked libraries is causing some confusion, so i will describe the use scenario. i have created a character in a file, with particle settings for multiple hair systems. i then create another file for an environment, and import the character as a linked scene file. from that scene file, i link the character to the environment scene. when i reload the environment file, the particle settings on the linked character object are lost.

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

I can not really reproduce the issue.

What exactly means "has no particle settings"?

@ideasman42, maybe you'll have more luck reproducing the issue?

I can not really reproduce the issue. What exactly means "has no particle settings"? @ideasman42, maybe you'll have more luck reproducing the issue?
Author

i get a LIB ERROR: Particle Settings: 'settings.name' missing from '/Path/To/Scene/File.blend', parent ''

this error is repeated for each of the particle settings.

this is on a character with multiple particle settings, all of which are now absent. i tested on a simple box with particle settings, imported into a simple scene, with the same result. perhaps it is a platform issue? the process is not new, i have been using it through multiple iterations of Blender. i considered maybe that it was an issue with corrupt preferences, as i did recently load my user preferences from my previous version, but i just reverted to default preferences, and the problem persists.

i have included the two sample files i created which exhibit this problem:

error test_01.blend

error test_import_01.blend

i get a LIB ERROR: Particle Settings: 'settings.name' missing from '/Path/To/Scene/File.blend', parent '<direct>' this error is repeated for each of the particle settings. this is on a character with multiple particle settings, all of which are now absent. i tested on a simple box with particle settings, imported into a simple scene, with the same result. perhaps it is a platform issue? the process is not new, i have been using it through multiple iterations of Blender. i considered maybe that it was an issue with corrupt preferences, as i did recently load my user preferences from my previous version, but i just reverted to default preferences, and the problem persists. i have included the two sample files i created which exhibit this problem: [error test_01.blend](https://archive.blender.org/developer/F219416/error_test_01.blend) [error test_import_01.blend](https://archive.blender.org/developer/F219417/error_test_import_01.blend)

You should have told object linked to local scene to have carried out 'make local'.
However, the object in the file which you attached is linked.
Why is it that it is different from your explanation?

You should have told object linked to local scene to have carried out 'make local'. However, the object in the file which you attached is linked. Why is it that it is different from your explanation?
Author

sorry, i thought that was clear. it is in the short description of the error. i cannot perform any actions on an object that is not local, as any armature modifiers would not function. library groups with armature proxies may be my only option now, but have proved problematic in the past, which is why i link the scene file, and link objects directly. it may be that i am using a deprecated process, but it used to work.

sorry, i thought that was clear. it is in the short description of the error. i cannot perform any actions on an object that is not local, as any armature modifiers would not function. library groups with armature proxies may be my only option now, but have proved problematic in the past, which is why i link the scene file, and link objects directly. it may be that i am using a deprecated process, but it used to work.

Will you put the snapshot every procedure what kind of procedure you operated it in to become clear?
Please use error test_01.blend which you attached.
I was not able to reproduce this problem even if I used error test_01.blend which you attached.

Will you put the snapshot every procedure what kind of procedure you operated it in to become clear? Please use error test_01.blend which you attached. I was not able to reproduce this problem even if I used error test_01.blend which you attached.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Has anyone been able to reproduce now?

Has anyone been able to reproduce now?

Added subscribers: @LukasTonne, @mont29

Added subscribers: @LukasTonne, @mont29

I can confirm the issue, it’s caused by new usage of GHash in blend readcode (a8f6d51e) - that ghash is only filled with idname of linkable datablocks.

Now, particle settings are not linkable currently (not sure I understand why?). So core of the issue is that, when making local a linked object, its particlesettings remain linked - this shall not happen.

We can fix this in several ways (non of those being mutually exclusive):

  • Add non-linkable idname to read ghash (simplest solution, restores previous behavior, but allows for wrong things);
  • Make ParticleSettings linkable (do not see why they are not?)
  • In any case, I think we should try to add some check when localizing some linked data, to also systematically localize non-linkable datablocks used by that data?

@ideasman42, @Sergey (and maybe @LukasTonne too), what do you say?

I can confirm the issue, it’s caused by new usage of GHash in blend readcode (a8f6d51e) - that ghash is only filled with idname of **linkable** datablocks. Now, particle settings **are not** linkable currently (not sure I understand why?). So core of the issue is that, when making local a linked object, its particlesettings remain linked - this shall not happen. We can fix this in several ways (non of those being mutually exclusive): * Add non-linkable idname to read ghash (simplest solution, restores previous behavior, but allows for wrong things); * Make ParticleSettings linkable (do not see why they are not?) * In any case, I think we should try to add some check when localizing some linked data, to also systematically localize non-linkable datablocks used by that data? @ideasman42, @Sergey (and maybe @LukasTonne too), what do you say?
Bastien Montagne self-assigned this 2015-08-21 17:06:06 +02:00
Member

Removed subscriber: @LukasTonne

Removed subscriber: @LukasTonne

This issue was referenced by 7d0b29be69

This issue was referenced by 7d0b29be69393fc08d30c0753c63999a880c4247

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45658
No description provided.